creamos la vista de citas

--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -29,7 +29,7 @@
           <span class="contact-icon">📞</span> +34 555 555 555
         </li>
         <li class="contact-item">
-          <span class="contact-icon">✉️</span> info@siennavet.com
+          <span class="contact-icon">✉️</span> info&#64;siennavet.com
         </li>
         <li class="contact-item">
           <span class="contact-icon">🕒</span> 24/7 Disponible
@@ -38,7 +38,7 @@
     </div>
 
     <div class="footer-section">
-      <h3>Horario</h3>
+      <h3>Horarios</h3>
       <ul>
         <li>Lunes - Viernes: 9:00 - 20:00</li>
         <li>Sábado: 10:00 - 15:00</li>
