--- a/src/app/components/hero/hero.html
+++ b/src/app/components/hero/hero.html
@@ -1,27 +1,28 @@
 <main class="hero">
-    <section class="Section-Descripcion">
-        <div class="hero-badge">Confianza y Calidez</div>
-        <h1>SiennaVet <span class="highlight">Cuidamos</span> a tu <span class="highlight">Compañero</span></h1>
-        <p class="descripcion">
-            Clínica Veterinaria de Animales Exóticos en Madrid. Servicio 24/7 con atención personalizada para perros, gatos y animales exóticos.
-        </p>
-        <div class="hero-buttons">
-            <button class="cta-button">Solicitar Cita</button>
-            <button class="secondary-button">Ver Servicios</button>
-        </div>
-        <div class="contact-info">
-            <div class="contact-item">
-                <svg class="contact-icon" ></svg>
-                <span>555 55 55 55</span>
-            </div>
-            <div class="contact-item">
-                <svg class="contact-icon" ></svg>
-                <span>Calle Castro de Oro, 13</span>
-            </div>
-        </div>
-    </section>
+  <section class="Section-Descripcion">
+    <div class="hero-badge">Confianza y Calidez</div>
+    <h1>SiennaVet <span class="highlight">Cuidamos</span> a tu <span class="highlight">Compañero</span></h1>
+    <p class="descripcion">
+      Clínica Veterinaria de Animales Exóticos en Madrid. Servicio 24/7 con atención personalizada para perros, gatos y
+      animales exóticos.
+    </p>
+    <div class="hero-buttons">
+      <button class="cta-button">Solicitar Cita</button>
+      <button class="secondary-button">Ver Servicios</button>
+    </div>
+    <!--<div class="contact-info">
+      <div class="contact-item">
+        <svg class="contact-icon"></svg>
+        <span>555 55 55 55</span>
+      </div>
+      <div class="contact-item">
+        <svg class="contact-icon"></svg>
+        <span>Calle Castro de Oro, 13</span>
+      </div>
+    </div>-->
+  </section>
 
-    <section class="Section-Img">
-        <img src="../../../../siennaPortada.jpg" alt="Clínica Veterinaria SiennaVet">
-    </section>
+  <section class="Section-Img">
+    <img src="../../../../siennaPortada.jpg" alt="Clínica Veterinaria SiennaVet">
+  </section>
 </main>
