--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -5,8 +5,8 @@
       <nav class="sidebar-nav">
         <ul>
           <li>
-            <a 
-              routerLink="/dashboard" 
+            <a
+              routerLink="/dashboard"
               routerLinkActive="active"
               [routerLinkActiveOptions]="{exact: true}"
               class="sidebar-link"
@@ -16,8 +16,8 @@
             </a>
           </li>
           <li>
-            <a 
-              routerLink="/dashboard/citas" 
+            <a
+              routerLink="/dashboard/citas"
               routerLinkActive="active"
               class="sidebar-link"
             >
@@ -26,8 +26,8 @@
             </a>
           </li>
           <li>
-            <a 
-              routerLink="/dashboard/vets" 
+            <a
+              routerLink="/dashboard/vets"
               routerLinkActive="active"
               class="sidebar-link"
             >
@@ -36,8 +36,8 @@
             </a>
           </li>
            <li>
-            <a 
-              routerLink="/dashboard/clientes" 
+            <a
+              routerLink="/dashboard/clientes"
               routerLinkActive="active"
               class="sidebar-link"
             >
@@ -46,13 +46,23 @@
             </a>
           </li>
           <li>
-            <a 
-              routerLink="/dashboard/razas" 
+            <a
+              routerLink="/dashboard/razas"
               routerLinkActive="active"
               class="sidebar-link"
             >
               <span class="icon">🐕</span>
               <span class="link-text">Razas</span>
+            </a>
+          </li>
+          <li>
+            <a
+              routerLink="/dashboard/mensajes"
+              routerLinkActive="active"
+              class="sidebar-link"
+            >
+              <span class="icon">📩</span>
+              <span class="link-text">Mensajes</span>
             </a>
           </li>
         </ul>
