--- a/src/app/pages/razas/razas.html
+++ b/src/app/pages/razas/razas.html
@@ -59,6 +59,17 @@
           }
         </tbody>
       </table>
+      <div class="pagination-container">
+        <button class="btn-anterior" (click)="anteriorPagina()" [disabled]="offset <= 0">
+          &lt; Anterior
+        </button>
+        <div class="pagination-info">
+          Página {{offset + 1}}
+        </div>
+        <button class="btn-siguiente" (click)="siguientePagina()" [disabled]="listaRaza.length < limit">
+          Siguiente &gt;
+        </button>
+      </div>
     }
   </div>
 
