--- a/src/app/components/hero/hero.html
+++ b/src/app/components/hero/hero.html
@@ -7,7 +7,7 @@
       animales exóticos.
     </p>
     <div class="hero-buttons">
-      <button class="cta-button">Solicitar Cita</button>
+      <a class="cta-button" href="#contact">Solicitar Cita</a>
       <button class="secondary-button">Ver Servicios</button>
     </div>
     <!--<div class="contact-info">
