--- a/src/app/pages/razas/razas.html
+++ b/src/app/pages/razas/razas.html
@@ -66,7 +66,7 @@
         <div class="pagination-info">
           Página {{offset + 1}}
         </div>
-        <button class="btn-siguiente" (click)="siguientePagina()" [disabled]="listaRaza.length < limit">
+        <button class="btn-siguiente" (click)="siguientePagina()" >
           Siguiente &gt;
         </button>
       </div>
