--- a/src/app/pages/vets/vets.html
+++ b/src/app/pages/vets/vets.html
@@ -82,7 +82,7 @@
         <div class="pagination-info">
           Página {{offset + 1}}
         </div>
-        <button class="btn-siguiente" (click)="siguientePagina()" [disabled]="listaVeterinarios.length < limit">
+        <button class="btn-siguiente" (click)="siguientePagina()">
           Siguiente &gt;
         </button>
       </div>
