--- a/src/app/pages/clientes/clientes.html
+++ b/src/app/pages/clientes/clientes.html
@@ -76,7 +76,7 @@
         <div class="pagination-info">
           Página {{offset + 1}}
         </div>
-        <button class="btn-siguiente" (click)="siguientePagina()" [disabled]="listaClientes.length < limit">
+        <button class="btn-siguiente" (click)="siguientePagina()">
           Siguiente &gt;
         </button>
       </div>
