--- a/src/app/pages/mensajes/mensajes.html
+++ b/src/app/pages/mensajes/mensajes.html
@@ -68,7 +68,7 @@
         <div class="pagination-info">
           Página {{offset + 1}}
         </div>
-        <button class="btn-siguiente" (click)="siguientePagina()" [disabled]="listaContacto.length < limit">
+        <button class="btn-siguiente" (click)="siguientePagina()">
           Siguiente &gt;
         </button>
       </div>
