--- a/src/app/pages/razas/razas.html
+++ b/src/app/pages/razas/razas.html
@@ -1,150 +1,1 @@
-<div class="dashboard-container">
-  <h1>Panel de Razas</h1>
-  <p>Gestión de razas en SiennaVet. Aquí puedes ver, editar y eliminar los registros de razas.</p>
-
-  <!-- Tabla para mostrar los clientes -->
-  <div class="fichas-table-container">
-    <div class="search-container">
-      <h2>Registro de razas</h2>
-      <div class="search-box">
-        <input
-          type="text"
-          placeholder="Buscar en todas razas..."
-          [(ngModel)]="terminoBusqueda"
-          (input)="buscarRaza()"
-          class="search-input"
-        />
-      </div>
-    </div>
-    <!-- Botón para crear nueva razas -->
-    <div class="create-btn-container">
-      <button class="btn-crear" (click)="crearNuevaRaza()">Crear Nueva Raza</button>
-    </div>
-
-    <!-- Mostrar mensaje de carga -->
-    @if (cargando) {
-      <div class="loading">Cargando razas...</div>
-    }
-
-    <!-- Mostrar mensaje de error -->
-    @if (error != null) {
-      <div class="error">
-        {{ error }}
-      </div>
-    }
-
-    <!-- Tabla de clientes -->
-    @if (!cargando && !error) {
-      <table class="fichas-table">
-        <thead>
-        <tr>
-          <th>ID</th>
-          <th>Tipo Raza</th>
-          <th>Nombre Raza</th>
-          <th>Acciones</th>
-        </tr>
-        </thead>
-        <tbody>
-          @for (razas of listaRazaFiltrados; track razas.idRaza) {
-            <tr>
-              <td>{{ razas.idRaza }}</td>
-              <td>{{ razas.tipoRaza }}</td>
-              <td>{{ razas.nombre }}</td>
-              <td class="acciones-column">
-                <button class="btn-ver" (click)="verRaza(razas)">Ver</button>
-                <button class="btn-editar" (click)="mostrarEditarRaza(razas)">Editar</button>
-                <button class="btn-eliminar" (click)="mostrarEliminarRaza(razas)">Eliminar</button>
-              </td>
-            </tr>
-          }
-        </tbody>
-      </table>
-      <div class="pagination-container">
-        <button class="btn-anterior" (click)="anteriorPagina()" [disabled]="offset <= 0">
-          &lt; Anterior
-        </button>
-        <div class="pagination-info">
-          Página {{offset + 1}}
-        </div>
-        <button class="btn-siguiente" (click)="siguientePagina()" >
-          Siguiente &gt;
-        </button>
-      </div>
-    }
-  </div>
-
-  <!-- Modal de edición de cliente -->
-  @if (showModal) {
-    <div class="modal-overlay" (click)="cerrarModal()">
-      <div class="modal-content" (click)="$event.stopPropagation()">
-        <div class="modal-header">
-          <h3>Editar Razas</h3>
-          <span class="close-btn" (click)="cerrarModal()">&times;</span>
-        </div>
-        @if (razaEditando) {
-          <div class="modal-body">
-            <form (ngSubmit)="guardarRaza()" #clienteForm="ngForm">
-              <div class="form-group">
-                <label for="nombre">Tipo de Raza:</label>
-                <input
-                  type="text"
-                  id="tipoRaza"
-                  [(ngModel)]="razaEditando.tipoRaza"
-                  name="tipoRaza"
-                  class="form-control"
-                  required
-                />
-              </div>
-
-              <div class="form-group">
-                <label for="nombre">Nombre Raza:</label>
-                <input
-                  type="text"
-                  id="nombre"
-                  [(ngModel)]="razaEditando.nombre"
-                  name="nombre"
-                  class="form-control"
-                  required
-                />
-              </div>
-
-              <div class="modal-footer">
-                <button type="button" class="btn-cancelar" (click)="cerrarModal()">Cancelar</button>
-                <button type="submit" class="btn-guardar" [disabled]="!clienteForm.form.valid">
-                  Guardar
-                </button>
-              </div>
-            </form>
-          </div>
-        }
-      </div>
-    </div>
-  }
-
-  <!-- Modal de visualización de detalles de cliente -->
-  @if (showDetails){<div class="modal-overlay" (click)="cerrarDetalles()">
-    <div class="modal-content" (click)="$event.stopPropagation()">
-      <div class="modal-header">
-        <h3>Detalles de la Raza</h3>
-        <span class="close-btn" (click)="cerrarDetalles()">&times;</span>
-      </div>
-      @if (razaDetalles){
-  <div class="modal-body">
-    <div class="form-group">
-      <label for="tipoRaza">tipo Raza:</label>
-      <div class="form-control-readonly">{{ razaDetalles.tipoRaza }}</div>
-    </div>
-
-    <div class="form-group">
-      <label for="nombre">Nombre Raza:</label>
-      <div class="form-control-readonly">{{ razaDetalles.nombre }}</div>
-    </div>
-
-    <div class="modal-footer">
-      <button type="button" class="btn-cerrar" (click)="cerrarDetalles()">Cerrar</button>
-    </div>
-  </div>
-  }
-  </div>
-</div>}
-</div>
+<app-table-generic [config]="config" [service]="service"></app-table-generic>
